--- a/resources/frontend/nazanin/index.html
+++ b/resources/frontend/nazanin/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="fa">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/nazanin/style.css">
+
     <title>جهانرو</title>
 </head>
 <body>
-    <img src="back.png" alt="سفر" class="background-img">
+    <img src="/static/nazanin/img/back.png" alt="سفر" class="background-img">
     <div class="overlay"></div>
     <div class="content">
         <h1>به دنیای سفر خوش آمدید</h1>
