--- a/resources/frontend/shaqayeq/singup.html
+++ b/resources/frontend/shaqayeq/singup.html
@@ -9,20 +9,20 @@
 <body>
 
     <div class="signup-container">
-        <h2>Create an Account</h2>
+        <h2>ساختن اکانت </h2>
         <form>
-            <input type="text" placeholder="Full Name" required>
-            <input type="email" placeholder="Email" required>
-            <input type="password" placeholder="Password" required>
-            <input type="password" placeholder="Confirm Password" required>
-            <button type="submit" class="signup-btn">Sign Up</button>
+            <input type="text" placeholder="نام کامل" required>
+            <input type="email" placeholder="ایمیل" required>
+            <input type="password" placeholder="رمز عبور" required>
+            <input type="password" placeholder="تایید رمز عبور" required>
+            <button type="submit" class="signup-btn">ایجاد حساب کاربری</button>
         </form>
         <div class="divider">or</div>
         <button class="google-btn">
             <img src="./img/google.jpg" alt="Google Logo">
-            Sign up with Google
+            ایجاد حساب با گوگل
         </button>
-        <p class="login-link">Already have an account? <a href="login.html">Sign in</a></p>
+        <p class="login-link">حساب کاربری داری؟ <a href="login.html">ورود</a></p>
     </div>
 
 </body>
